fixing issue where form might be covered by other elements on the page #45

--- a/cu_feedback/css/cu_feedback.css
+++ b/cu_feedback/css/cu_feedback.css
@@ -2,10 +2,11 @@
   position: fixed;
   right:15px;
   bottom:0;
-  z-index: 1;
+  z-index: 100;
   width:240px;
   font-size: 12px;
-
+  max-height: 75%;
+  overflow-y: scroll;
 }
 #cu-feedback a.cu-feedback-link.button {
 
